--- a/AutomationTesting/test-output/emailable-report.html
+++ b/AutomationTesting/test-output/emailable-report.html
@@ -9,88 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">AmazonTestSuite</th></tr>
-<tr><td><a href="#t0">LoginAndSearchTest_Chrome</a></td><td class="num">7</td><td class="num attn">5</td><td class="num">0</td><td class="num attn">1</td><td class="num">35,474</td><td></td><td></td></tr>
+<tr><td><a href="#t0">LoginAndSearchTest_Chrome</a></td><td class="num">13</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">61,134</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AmazonTestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginAndSearchTest_Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.SearchTest</td><td><a href="#m0">testApplyFilters</a></td><td rowspan="1">1756901985862</td><td rowspan="1">3490</td></tr><tr><th colspan="4">LoginAndSearchTest_Chrome &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="5">tests.CartTest</td><td><a href="#m1">buyProducts</a></td><td rowspan="1">1756901999989</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m2">cartAddTest</a></td><td rowspan="1">1756901999979</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m3">deleteFromCart</a></td><td rowspan="1">1756901999984</td><td rowspan="1">1</td></tr><tr class="skippedeven"><td><a href="#m4">modifyQuantity</a></td><td rowspan="1">1756901999981</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m5">placeOrder</a></td><td rowspan="1">1756901999993</td><td rowspan="1">0</td></tr><tr><th colspan="4">LoginAndSearchTest_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.LoginTest</td><td><a href="#m6">invalidLoginTest</a></td><td rowspan="1">1756901970055</td><td rowspan="1">3895</td></tr><tr class="passedeven"><td><a href="#m7">validLoginTest</a></td><td rowspan="1">1756901977531</td><td rowspan="1">2563</td></tr><tr class="passedeven"><td><a href="#m8">verifyLoginTest</a></td><td rowspan="1">1756901973960</td><td rowspan="1">3569</td></tr><tr class="passedodd"><td rowspan="4">tests.SearchTest</td><td><a href="#m9">testBlankSearch</a></td><td rowspan="1">1756901991157</td><td rowspan="1">2301</td></tr><tr class="passedodd"><td><a href="#m10">testSearchProduct</a></td><td rowspan="1">1756901980107</td><td rowspan="1">5753</td></tr><tr class="passedodd"><td><a href="#m11">testSortLowToHigh</a></td><td rowspan="1">1756901989357</td><td rowspan="1">1796</td></tr><tr class="passedodd"><td><a href="#m12">testViewProductDetails</a></td><td rowspan="1">1756901993461</td><td rowspan="1">6510</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AmazonTestSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginAndSearchTest_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">tests.CartTest</td><td><a href="#m0">buyProducts</a></td><td rowspan="1">1757007473406</td><td rowspan="1">4818</td></tr><tr class="passedeven"><td><a href="#m1">cartAddTest</a></td><td rowspan="1">1757007461987</td><td rowspan="1">5336</td></tr><tr class="passedeven"><td><a href="#m2">deleteFromCart</a></td><td rowspan="1">1757007472196</td><td rowspan="1">1210</td></tr><tr class="passedeven"><td><a href="#m3">modifyQuantity</a></td><td rowspan="1">1757007467326</td><td rowspan="1">4868</td></tr><tr class="passedeven"><td><a href="#m4">placeOrder</a></td><td rowspan="1">1757007478224</td><td rowspan="1">33</td></tr><tr class="passedodd"><td rowspan="3">tests.LoginTest</td><td><a href="#m5">invalidLoginTest</a></td><td rowspan="1">1757007423695</td><td rowspan="1">4029</td></tr><tr class="passedodd"><td><a href="#m6">validLoginTest</a></td><td rowspan="1">1757007431161</td><td rowspan="1">2426</td></tr><tr class="passedodd"><td><a href="#m7">verifyLoginTest</a></td><td rowspan="1">1757007427731</td><td rowspan="1">3423</td></tr><tr class="passedeven"><td rowspan="5">tests.SearchTest</td><td><a href="#m8">testApplyFilters</a></td><td rowspan="1">1757007439420</td><td rowspan="1">9684</td></tr><tr class="passedeven"><td><a href="#m9">testBlankSearch</a></td><td rowspan="1">1757007450958</td><td rowspan="1">3461</td></tr><tr class="passedeven"><td><a href="#m10">testSearchProduct</a></td><td rowspan="1">1757007433596</td><td rowspan="1">5822</td></tr><tr class="passedeven"><td><a href="#m11">testSortLowToHigh</a></td><td rowspan="1">1757007449106</td><td rowspan="1">1850</td></tr><tr class="passedeven"><td><a href="#m12">testViewProductDetails</a></td><td rowspan="1">1757007454420</td><td rowspan="1">7558</td></tr></tbody>
 </table>
-<h2>LoginAndSearchTest_Chrome</h2><h3 id="m0">tests.SearchTest#testApplyFilters</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//li[@id=&apos;p_72/1318476031&apos;]/span/div/a/i&quot;}
-  (Session info: chrome=139.0.7258.155)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.34.0&apos;, revision: &apos;707dcb4246*&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.2&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [4831383f478d343b768cfb3b47620340, findElement {using=xpath, value=//li[@id=&apos;p_72/1318476031&apos;]/span/div/a/i}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 139.0.7258.155, chrome: {chromedriverVersion: 139.0.7258.154 (9e0d6b2b47f..., userDataDir: C:\Users\Asus\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50052}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50052/devtoo..., se:cdpVersion: 139.0.7258.155, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 4831383f478d343b768cfb3b47620340
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:544)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at jdk.proxy2/jdk.proxy2.$Proxy13.getWrappedElement(Unknown Source)
-	at org.openqa.selenium.remote.WebElementToJsonConverter.apply(WebElementToJsonConverter.java:48)
-	at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
-	at java.base/java.util.Spliterators$ArraySpliterator.forEachRemaining(Spliterators.java:1024)
-	at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:509)
-	at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:499)
-	at java.base/java.util.stream.ReduceOps$ReduceOp.evaluateSequential(ReduceOps.java:921)
-	at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:234)
-	at java.base/java.util.stream.ReferencePipeline.collect(ReferencePipeline.java:682)
-	at org.openqa.selenium.remote.RemoteWebDriver.executeScript(RemoteWebDriver.java:473)
-	at pages.SearchPage.applyCustomerRatings(SearchPage.java:117)
-	at tests.SearchTest.testApplyFilters(SearchTest.java:42)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.CartTest#buyProducts</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method CartTest.buyProducts()[pri:4, instance:tests.CartTest@2cd76f31] depends on not successfully finished methods in group &quot;search&quot;
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.CartTest#cartAddTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method CartTest.cartAddTest()[pri:1, instance:tests.CartTest@2cd76f31] depends on not successfully finished methods in group &quot;search&quot;
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.CartTest#deleteFromCart</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method CartTest.deleteFromCart()[pri:3, instance:tests.CartTest@2cd76f31] depends on not successfully finished methods in group &quot;search&quot;
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.CartTest#modifyQuantity</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method CartTest.modifyQuantity()[pri:2, instance:tests.CartTest@2cd76f31] depends on not successfully finished methods in group &quot;search&quot;
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">tests.CartTest#placeOrder</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method CartTest.placeOrder()[pri:5, instance:tests.CartTest@2cd76f31] depends on not successfully finished methods in group &quot;search&quot;
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1583)
-... Removed 8 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">tests.LoginTest#invalidLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">tests.LoginTest#validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">tests.LoginTest#verifyLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>LoginAndSearchTest_Chrome</h2><h3 id="m0">tests.CartTest#buyProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.CartTest#cartAddTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.CartTest#deleteFromCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.CartTest#modifyQuantity</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">tests.CartTest#placeOrder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">tests.LoginTest#invalidLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">tests.LoginTest#validLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">tests.LoginTest#verifyLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">tests.SearchTest#testApplyFilters</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m9">tests.SearchTest#testBlankSearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m10">tests.SearchTest#testSearchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m11">tests.SearchTest#testSortLowToHigh</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
